projects/prove/backend/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: prove-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: registry.coherent.in/web-scraping-portal:71
          resources:
            requests:
              cpu: "3000m"
              memory: "4Gi"
            limits:
              cpu: "3000m"
              memory: "4Gi"
          imagePullPolicy: Always
          name: backend
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name:  backend-data
              mountPath:  /usr/src/app/storage
      imagePullSecrets:
      - name: registry-regcred
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: pvc-prove-backend
